// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`button > render as an anchor with href prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      aria-disabled="false"
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      href="http://scaleway.com"
      type="button"
    >
      Scaleway
    </a>
  </div>
</DocumentFragment>
`;

exports[`button > render large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with a tooltip 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="_r_23_"
      aria-describedby="_r_23_"
      class="emotion-0 emotion-1"
      data-container-full-width="false"
      tabindex="0"
    >
      <button
        class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        Hello
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`button > render with fullWidth 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_true__e1wcoe5 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-0 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      disabled=""
      type="button"
    >
      <svg
        class="emotion-0 emotion-1"
        viewBox="0 0 16 16"
      >
        <path
          d="M14.402 1.59799C13.6047 0.80067 12.312 0.80067 11.5147 1.59799L6.5428 6.56985C6.2449 6.86776 6.00858 7.22142 5.84735 7.61064L4.8583 9.99827C4.72286 10.3252 4.79771 10.7016 5.04795 10.9518C5.29819 11.2021 5.67454 11.277 6.00151 11.1415L8.38944 10.1525C8.77872 9.99126 9.13242 9.75492 9.43036 9.45699L14.402 4.48534C15.1993 3.68802 15.1993 2.39531 14.402 1.59799Z"
        />
        <path
          d="M4.20833 2.75C3.40291 2.75 2.75 3.40291 2.75 4.20833V11.7916C2.75 12.5971 3.40291 13.25 4.20833 13.25H11.7916C12.5971 13.25 13.25 12.5971 13.25 11.7916V9.16665C13.25 8.6834 13.6417 8.29165 14.125 8.29165C14.6082 8.29165 15 8.6834 15 9.16665V11.7916C15 13.5636 13.5636 15 11.7916 15H4.20833C2.43642 15 1 13.5636 1 11.7916V4.20833C1 2.43642 2.43642 1 4.20833 1H6.83332C7.31657 1 7.70832 1.39175 7.70832 1.875C7.70832 2.35825 7.31657 2.75 6.83332 2.75H4.20833Z"
        />
      </svg>
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with icon on the right 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-0 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      disabled=""
      type="button"
    >
      Hello
      <svg
        class="emotion-0 emotion-1"
        viewBox="0 0 16 16"
      >
        <path
          d="M14.402 1.59799C13.6047 0.80067 12.312 0.80067 11.5147 1.59799L6.5428 6.56985C6.2449 6.86776 6.00858 7.22142 5.84735 7.61064L4.8583 9.99827C4.72286 10.3252 4.79771 10.7016 5.04795 10.9518C5.29819 11.2021 5.67454 11.277 6.00151 11.1415L8.38944 10.1525C8.77872 9.99126 9.13242 9.75492 9.43036 9.45699L14.402 4.48534C15.1993 3.68802 15.1993 2.39531 14.402 1.59799Z"
        />
        <path
          d="M4.20833 2.75C3.40291 2.75 2.75 3.40291 2.75 4.20833V11.7916C2.75 12.5971 3.40291 13.25 4.20833 13.25H11.7916C12.5971 13.25 13.25 12.5971 13.25 11.7916V9.16665C13.25 8.6834 13.6417 8.29165 14.125 8.29165C14.6082 8.29165 15 8.6834 15 9.16665V11.7916C15 13.5636 13.5636 15 11.7916 15H4.20833C2.43642 15 1 13.5636 1 11.7916V4.20833C1 2.43642 2.43642 1 4.20833 1H6.83332C7.31657 1 7.70832 1.39175 7.70832 1.875C7.70832 2.35825 7.31657 2.75 6.83332 2.75H4.20833Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with icon only 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-0 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      disabled=""
      type="button"
    >
      <svg
        class="emotion-0 emotion-1"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M13.5081 2.4919C13.2689 2.2527 12.8811 2.2527 12.6419 2.4919L11.9641 3.16973L12.8303 4.03594L13.5081 3.3581C13.7473 3.11891 13.7473 2.73109 13.5081 2.4919ZM11.9022 4.96401L11.036 4.09781L5.45661 9.67719C5.17597 9.95782 4.96968 10.304 4.85637 10.6843L4.66151 11.3385L5.31567 11.1436C5.69604 11.0303 6.04218 10.824 6.32282 10.5434L11.9022 4.96401ZM11.7138 1.56382C12.4656 0.81206 13.6844 0.81206 14.4362 1.56382C15.1879 2.31558 15.1879 3.53442 14.4362 4.28618L7.2509 11.4715C6.81606 11.9063 6.27973 12.2259 5.69037 12.4015L3.8736 12.9427C3.64266 13.0115 3.3926 12.9482 3.22221 12.7778C3.05182 12.6074 2.98852 12.3573 3.05731 12.1264L3.5985 10.3096C3.77405 9.72027 4.09369 9.18394 4.52853 8.74911L10.5719 2.70569L11.036 3.16973L10.5719 2.70569L11.7138 1.56382ZM3.17875 4.84999C2.70033 4.84999 2.3125 5.23783 2.3125 5.71624V12.8212C2.3125 13.2997 2.70033 13.6875 3.17875 13.6875H10.2837C10.7622 13.6875 11.15 13.2997 11.15 12.8212V9.60708C11.15 9.24464 11.4438 8.95083 11.8062 8.95083C12.1687 8.95083 12.4625 9.24464 12.4625 9.60708V12.8212C12.4625 14.0245 11.487 15 10.2837 15H3.17875C1.97546 15 1 14.0245 1 12.8212V5.71624C1 4.51295 1.97546 3.53749 3.17875 3.53749H6.39292C6.75535 3.53749 7.04917 3.83131 7.04917 4.19374C7.04917 4.55618 6.75535 4.84999 6.39292 4.84999H3.17875Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with isLoading with icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.emotion-2 {
  stroke: #d9dadd;
}

.emotion-4 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.emotion-5 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-5 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      disabled=""
      type="button"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="emotion-0 emotion-1"
        role="progressbar"
        style="height: 1rem; width: 1rem;"
        viewBox="0 0 100 100"
      >
        <circle
          class="emotion-2 emotion-3"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke-width="16"
        />
        <circle
          class="emotion-4"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#ffffff"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
      <svg
        class="emotion-5 emotion-6"
        viewBox="0 0 16 16"
      >
        <path
          d="M14.402 1.59799C13.6047 0.80067 12.312 0.80067 11.5147 1.59799L6.5428 6.56985C6.2449 6.86776 6.00858 7.22142 5.84735 7.61064L4.8583 9.99827C4.72286 10.3252 4.79771 10.7016 5.04795 10.9518C5.29819 11.2021 5.67454 11.277 6.00151 11.1415L8.38944 10.1525C8.77872 9.99126 9.13242 9.75492 9.43036 9.45699L14.402 4.48534C15.1993 3.68802 15.1993 2.39531 14.402 1.59799Z"
        />
        <path
          d="M4.20833 2.75C3.40291 2.75 2.75 3.40291 2.75 4.20833V11.7916C2.75 12.5971 3.40291 13.25 4.20833 13.25H11.7916C12.5971 13.25 13.25 12.5971 13.25 11.7916V9.16665C13.25 8.6834 13.6417 8.29165 14.125 8.29165C14.6082 8.29165 15 8.6834 15 9.16665V11.7916C15 13.5636 13.5636 15 11.7916 15H4.20833C2.43642 15 1 13.5636 1 11.7916V4.20833C1 2.43642 2.43642 1 4.20833 1H6.83332C7.31657 1 7.70832 1.39175 7.70832 1.875C7.70832 2.35825 7.31657 2.75 6.83332 2.75H4.20833Z"
        />
      </svg>
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with isLoading with icon variant 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-0 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      type="button"
    >
      <svg
        class="emotion-0 emotion-1"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M13.5081 2.4919C13.2689 2.2527 12.8811 2.2527 12.6419 2.4919L11.9641 3.16973L12.8303 4.03594L13.5081 3.3581C13.7473 3.11891 13.7473 2.73109 13.5081 2.4919ZM11.9022 4.96401L11.036 4.09781L5.45661 9.67719C5.17597 9.95782 4.96968 10.304 4.85637 10.6843L4.66151 11.3385L5.31567 11.1436C5.69604 11.0303 6.04218 10.824 6.32282 10.5434L11.9022 4.96401ZM11.7138 1.56382C12.4656 0.81206 13.6844 0.81206 14.4362 1.56382C15.1879 2.31558 15.1879 3.53442 14.4362 4.28618L7.2509 11.4715C6.81606 11.9063 6.27973 12.2259 5.69037 12.4015L3.8736 12.9427C3.64266 13.0115 3.3926 12.9482 3.22221 12.7778C3.05182 12.6074 2.98852 12.3573 3.05731 12.1264L3.5985 10.3096C3.77405 9.72027 4.09369 9.18394 4.52853 8.74911L10.5719 2.70569L11.036 3.16973L10.5719 2.70569L11.7138 1.56382ZM3.17875 4.84999C2.70033 4.84999 2.3125 5.23783 2.3125 5.71624V12.8212C2.3125 13.2997 2.70033 13.6875 3.17875 13.6875H10.2837C10.7622 13.6875 11.15 13.2997 11.15 12.8212V9.60708C11.15 9.24464 11.4438 8.95083 11.8062 8.95083C12.1687 8.95083 12.4625 9.24464 12.4625 9.60708V12.8212C12.4625 14.0245 11.487 15 10.2837 15H3.17875C1.97546 15 1 14.0245 1 12.8212V5.71624C1 4.51295 1.97546 3.53749 3.17875 3.53749H6.39292C6.75535 3.53749 7.04917 3.83131 7.04917 4.19374C7.04917 4.55618 6.75535 4.84999 6.39292 4.84999H3.17875Z"
          fill-rule="evenodd"
        />
      </svg>
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with isLoading without icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.emotion-2 {
  stroke: #d9dadd;
}

.emotion-4 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      disabled=""
      type="button"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="emotion-0 emotion-1"
        role="progressbar"
        style="height: 1rem; width: 1rem;"
        viewBox="0 0 100 100"
      >
        <circle
          class="emotion-2 emotion-3"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke-width="16"
        />
        <circle
          class="emotion-4"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#ffffff"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&black 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&black disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_black__e1wcoee styles_undefined_compound_7__e1wcoes"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&danger 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&danger disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_danger__e1wcoe9 styles_undefined_compound_2__e1wcoen"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&info 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&info disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_info__e1wcoea styles_undefined_compound_3__e1wcoeo"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&neutral 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&neutral disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_neutral__e1wcoed styles_undefined_compound_6__e1wcoer"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&primary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&primary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&secondary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&secondary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_secondary__e1wcoe8 styles_undefined_compound_1__e1wcoem"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&success 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&success disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_success__e1wcoeb styles_undefined_compound_4__e1wcoep"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&warning 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&warning disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_warning__e1wcoec styles_undefined_compound_5__e1wcoeq"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&white 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&white disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_white__e1wcoef styles_undefined_compound_8__e1wcoet"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&black 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&black disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_black__e1wcoee styles_undefined_compound_25__e1wcoe1a"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&danger 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&danger disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_danger__e1wcoe9 styles_undefined_compound_20__e1wcoe15"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&info 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&info disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_info__e1wcoea styles_undefined_compound_21__e1wcoe16"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&neutral 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&neutral disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&primary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&primary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_primary__e1wcoe7 styles_undefined_compound_18__e1wcoe13"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&secondary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&secondary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_secondary__e1wcoe8 styles_undefined_compound_19__e1wcoe14"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&success 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&success disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_success__e1wcoeb styles_undefined_compound_22__e1wcoe17"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&warning 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&warning disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_warning__e1wcoec styles_undefined_compound_23__e1wcoe18"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&white 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&white disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_white__e1wcoef styles_undefined_compound_26__e1wcoe1b"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&black 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&black disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_black__e1wcoee styles_undefined_compound_16__e1wcoe11"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&danger 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&danger disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_danger__e1wcoe9 styles_undefined_compound_11__e1wcoew"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&info 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&info disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_info__e1wcoea styles_undefined_compound_12__e1wcoex"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&neutral 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&neutral disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&primary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&primary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&secondary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&secondary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_secondary__e1wcoe8 styles_undefined_compound_10__e1wcoev"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&success 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&success disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_success__e1wcoeb styles_undefined_compound_13__e1wcoey"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&warning 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&warning disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_warning__e1wcoec styles_undefined_compound_14__e1wcoez"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&white 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&white disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class=" styles__e1wcoe0 styles_size_large__e1wcoe1 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_white__e1wcoef styles_undefined_compound_17__e1wcoe12"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > work with onPointerDown and onKeyDown 1`] = `[Function]`;
